@@ -71,7 +71,7 @@
          "web" : "https://github.com/ysasaki/p5-plack-middleware-assets-railslike"
       }
    },
-   "version" : "0.01",
+   "version" : "0.02",
    "x_contributors" : [
       "ysasaki <aloelight@gmail.com>"
    ]
