@@ -5,6 +5,7 @@ Revision history for Perl extension Plack-Middleware-Assets-RailsLike
     - Adds default configuration values.
     - Adds search_path option.
     - Adds Expires header to the HTTP response.
+    - Enables minifier by default.
 
 0.01 2013-06-04T14:46:04Z
 
